--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>icc world t20</title>
 </head>
-<body bgcolor="blue">
+<body bgcolor="yellow">
 <h1>india v pakistan</h1>
 <h2>19 MAR 2016</h2>
 <h3><em>head to head</em></h3>
@@ -15,3 +15,4 @@ india v pakistan
 <a href="file:///C:/Program%20Files/Chami/HTML-Kit/Untitled1.htm">link</a>
 </body>
 </html>
+
